# NURBS-CurveLab

./: .gitignore  CMakeLists.txt  LICENSE  QUICK_START.md  README.md  build.bat  build.sh  快速开始.md  项目完成总结.md
NURBS-CurveLab/: NURBS-CurveLab.cpp
config/: project_config.h
examples/: basic_curve_example.cpp  surface_modeling_example.cpp
src/core/: GeometryMath.cpp  GeometryMath.h  NurbsCurve.cpp  NurbsCurve.h  NurbsSurface.cpp  NurbsSurface.h
src/io/: ModelLoader.cpp  ModelLoader.h  StepExporter.cpp  StepExporter.h
